configurando eslint bcryptjs nodemon

--- a/user/package.json
+++ b/user/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "user",
   "version": "1.0.0",
   "main": "index.js",
@@ -8,8 +7,18 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.17"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.5"
   }
 }
