--- a/user/package.json
+++ b/user/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.2.17"
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.17",
+    "mongoose-paginate": "^5.0.3",
+    "nodemailer": "^4.6.8",
+    "nodemailer-express-handlebars": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
