--- a/bat/package.json
+++ b/bat/package.json
@@ -7,9 +7,10 @@
     "start": "node src/app.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.17",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1"
   }
 }
