--- a/bat/package.json
+++ b/bat/package.json
@@ -12,5 +12,13 @@
     "mongoose": "^5.2.17",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
